Fixed text clipping in staff item

--- a/src/components/RenderRouter/ListItem.scss
+++ b/src/components/RenderRouter/ListItem.scss
@@ -1221,7 +1221,7 @@
   .ListItemWebsite,
   .ListItemPublishedDate,
   .ListYearEpisode {
-    width: 20vw;
+    width: 18vw;
     white-space: normal;
     font-family: Graphik Web;
     color: theme.$onyxblacktext;
